--- a/data_cleaning.Rmd
+++ b/data_cleaning.Rmd
@@ -167,28 +167,28 @@ Since some of the columns in the data are the sum of some other columns, we have
 The first one is "significant strikes landed". Basically it is the sum of strikes landed in every position. (distance, clinch, ground), so we have to remove it. Also, since the sum of strikes landed on every body part (head, body, leg) also sums up to "significant strikes landed", we'll have to choose between position and body part.
 
 ```{r}
-# Remove columns of sig strikes landed
-sig_landed_col = sapply(colnames(data_reduced), str_detect, regex("SIG_STR_landed"))
-data_reduced = data_reduced[, !(sig_landed_col)]
+# # Remove columns of sig strikes landed
+# sig_landed_col = sapply(colnames(data_reduced), str_detect, regex("SIG_STR_landed"))
+# data_reduced = data_reduced[, !(sig_landed_col)]
 ```
 
 ```{r}
-# Remove strikes landed on each body part or (in each position)
-#str_types = c("DISTANCE", "CLINCH", "GROUND")
-str_types = c("HEAD", "BODY", "LEG")
-for(i in 1:length(str_types)){
-  str = paste(str_types[i], "_landed", sep="")
-  att_col = sapply(colnames(data_reduced), str_detect, regex(str))
-  data_reduced = data_reduced[, !(att_col)]
-}
+# # Remove strikes landed on each body part or (in each position)
+# str_types = c("DISTANCE", "CLINCH", "GROUND")
+# #str_types = c("HEAD", "BODY", "LEG")
+# for(i in 1:length(str_types)){
+#   str = paste(str_types[i], "_landed", sep="")
+#   att_col = sapply(colnames(data_reduced), str_detect, regex(str))
+#   data_reduced = data_reduced[, !(att_col)]
+# }
 ```
 
 Another one is "wins" column. It is the sum of all types of wins, so we also have to remove it.
 
 ```{r}
-# Remove columns of wins
-wins_col = sapply(colnames(data_reduced), str_detect, regex("_wins$"))
-data_reduced = data_reduced[, !(wins_col)]
+# # Remove columns of wins
+# wins_col = sapply(colnames(data_reduced), str_detect, regex("_wins$"))
+# data_reduced = data_reduced[, !(wins_col)]
 ```
 
 **Merge columns**
@@ -234,4 +234,13 @@ data_reduced = cbind(data_reduced, R_win_by_Decision)
 # Remove original columns
 dec_col = sapply(colnames(data_reduced), str_detect, regex("win_by_Decision_"))
 data_reduced = data_reduced[, !(dec_col)]
+```
+
+**Write the dataframe into csv file**
+
+```{r}
+#data_reduced = data_reduced[, c(1:22, 43, 45, 47, 23:42, 44, 46, 48)]
+data_reduced = data_reduced[, c(1:27, 53, 55, 57, 28:52, 54, 56, 58)]
+filename = "data_ML.csv"
+write.csv(data_reduced, filename, row.names = FALSE)
 ```
