--- a/data_cleaning.Rmd
+++ b/data_cleaning.Rmd
@@ -9,6 +9,7 @@ output: html_document
 
 ```{r}
 # Read the file
+library(stringr)
 data = read.csv("./ufc_data.csv")
 ```
 
@@ -63,12 +64,35 @@ winner_lab <- paste(winner_lab, '%', sep='')
 pie(table(data_reduced$Winner),labels=winner_lab, main='Pie chart with percentage of Winner types')
 ```
 
-We found an interesting fact that more fighters in red corner in comparison with blue corner.
+We found an interesting fact that more fighters in red corner win in comparison with blue corner. This is actually all winners before 2010 are recorded as red. We don't want this kind of unbalanced response variable, so we will switch the two sides and use them as new observations.
 
 Another fact is that the fights ending in a draw only account for less than 2%, so we drop all the rows whose "Winner" column is draw.
 
 ```{r}
 data_reduced = data_reduced[data_reduced$Winner != "Draw",]
+```
+
+```{r}
+# Copy the entire dataset and swap everything related to Red and Blue
+data_switch = data_reduced[, c(1, 2, 43:82, 3:42, 83, 84)]
+colnames(data_switch) = colnames(data_reduced)
+blue_idx = data_reduced$Winner == "Blue"
+red_idx = data_reduced$Winner == "Red"
+data_switch$Winner[blue_idx] = "Red"
+data_switch$Winner[red_idx] = "Blue"
+
+# Concat the two dataframes
+data_reduced = rbind(data_reduced, data_switch)
+```
+
+```{r, results='hold'}
+n = nrow(data_reduced)
+winner_type = levels(as.factor(data_reduced$Winner))
+winner_percent = 100*table(data_reduced$Winner)/n
+winner_lab = paste(winner_type, ": ", winner_percent, sep='')
+winner_lab <- paste(winner_lab, '%', sep='')
+
+pie(table(data_reduced$Winner),labels=winner_lab, main='Pie chart with percentage of Winner types')
 ```
 
 **Check correlated columns based on background knowledge**
@@ -160,35 +184,35 @@ tot_col = sapply(colnames(data_reduced), str_detect, regex("Height"))
 data_reduced = data_reduced[, !(tot_col)]
 ```
 
-**Getting rid of multicollinearity between columns (NN & Decision Tree can ignore this part)**
+**Getting rid of linear dependancy between columns (NN & Decision Tree can ignore this part)**
 
 Since some of the columns in the data are the sum of some other columns, we have to remove them so that statistical regression can work.
 
 The first one is "significant strikes landed". Basically it is the sum of strikes landed in every position. (distance, clinch, ground), so we have to remove it. Also, since the sum of strikes landed on every body part (head, body, leg) also sums up to "significant strikes landed", we'll have to choose between position and body part.
 
 ```{r}
-# # Remove columns of sig strikes landed
-# sig_landed_col = sapply(colnames(data_reduced), str_detect, regex("SIG_STR_landed"))
-# data_reduced = data_reduced[, !(sig_landed_col)]
+# Remove columns of sig strikes landed
+sig_landed_col = sapply(colnames(data_reduced), str_detect, regex("SIG_STR_landed"))
+data_reduced = data_reduced[, !(sig_landed_col)]
 ```
 
 ```{r}
-# # Remove strikes landed on each body part or (in each position)
-# str_types = c("DISTANCE", "CLINCH", "GROUND")
-# #str_types = c("HEAD", "BODY", "LEG")
-# for(i in 1:length(str_types)){
-#   str = paste(str_types[i], "_landed", sep="")
-#   att_col = sapply(colnames(data_reduced), str_detect, regex(str))
-#   data_reduced = data_reduced[, !(att_col)]
-# }
+# Remove strikes landed on each body part or (in each position)
+#str_types = c("DISTANCE", "CLINCH", "GROUND")
+str_types = c("HEAD", "BODY", "LEG")
+for(i in 1:length(str_types)){
+  str = paste(str_types[i], "_landed", sep="")
+  att_col = sapply(colnames(data_reduced), str_detect, regex(str))
+  data_reduced = data_reduced[, !(att_col)]
+}
 ```
 
 Another one is "wins" column. It is the sum of all types of wins, so we also have to remove it.
 
 ```{r}
-# # Remove columns of wins
-# wins_col = sapply(colnames(data_reduced), str_detect, regex("_wins$"))
-# data_reduced = data_reduced[, !(wins_col)]
+# Remove columns of wins
+wins_col = sapply(colnames(data_reduced), str_detect, regex("_wins$"))
+data_reduced = data_reduced[, !(wins_col)]
 ```
 
 **Merge columns**
@@ -239,8 +263,13 @@ data_reduced = data_reduced[, !(dec_col)]
 **Write the dataframe into csv file**
 
 ```{r}
-#data_reduced = data_reduced[, c(1:22, 43, 45, 47, 23:42, 44, 46, 48)]
-data_reduced = data_reduced[, c(1:27, 53, 55, 57, 28:52, 54, 56, 58)]
-filename = "data_ML.csv"
+# For ML methods
+# data_reduced = data_reduced[, c(1:27, 53, 55, 57, 28:52, 54, 56, 58)]
+# filename = "data_ML.csv"
+
+# For statistical learning methods
+data_reduced = data_reduced[, c(1:22, 43, 45, 47, 23:42, 44, 46, 48)]
+#filename = "data_body_logit.csv"
+filename = "data_position_logit.csv"
 write.csv(data_reduced, filename, row.names = FALSE)
 ```
