--- a/data_cleaning_for_prediction.Rmd
+++ b/data_cleaning_for_prediction.Rmd
@@ -54,12 +54,14 @@ data_reduced = data_reduced[, !(w_col)]
 Since "draw" rarely happens, almost every element in the column equals 0, so we can drop the columns of recorded draw..
 
 ```{r}
-# Drop weight column
+# Drop draw column
 draw_col = sapply(colnames(data_reduced), str_detect, regex("draw"))
 data_reduced = data_reduced[, !(draw_col)]
 ```
 
-Now we check the proportion of each level in "Winner".
+**Check categorical data**
+
+First we check the proportion of each level in "Winner".
 
 ```{r, results='hold'}
 n = nrow(data_reduced)
@@ -88,9 +90,6 @@ data_reduced = data_reduced[data_reduced$Winner != "Draw",]
 # 
 # # Concat the two dataframes
 # data_reduced = rbind(data_reduced, data_switch)
-
-
-
 ```
 
 ```{r, results='hold'}
@@ -101,6 +100,32 @@ winner_lab = paste(winner_type, ": ", winner_percent, sep='')
 winner_lab <- paste(winner_lab, '%', sep='')
 
 pie(table(data_reduced$Winner),labels=winner_lab, main='Pie chart with percentage of Winner types')
+```
+
+Now we check the proportion of the "weight class"
+
+```{r}
+class_type = levels(as.factor(data_reduced$weight_class))
+class_percent = 100*table(data_reduced$weight_class)/n
+class_lab = paste(class_type, ": ", class_percent, sep='')
+class_lab <- paste(class_lab, '%', sep='')
+
+pie(table(data_reduced$weight_class),labels=class_lab, main='Pie chart with percentage of Each Weight Class')
+```
+
+We can see that several weight classes only occupy for less than 5%, including flywieght, catchweight (this is actually not a weight class) and every weight class for women. Therefore, we decide to drop all of the weight class less than 5%.
+
+```{r}
+class_drop = c("Fly|Catch|Women")
+drop_class = sapply(data_reduced$weight_class, str_detect, regex(class_drop))
+data_reduced = data_reduced[!drop_class, ]
+
+class_type = levels(as.factor(data_reduced$weight_class))
+class_percent = 100*table(data_reduced$weight_class)/n
+class_lab = paste(class_type, ": ", class_percent, sep='')
+class_lab <- paste(class_lab, '%', sep='')
+
+pie(table(data_reduced$weight_class),labels=class_lab, main='Pie chart with percentage of Each Weight Class')
 ```
 
 **Check correlated columns based on background knowledge**
@@ -193,40 +218,41 @@ cor(data_reduced$R_Height_cms, data_reduced$R_Reach_cms)
 The plots and correlations suggest the same. We now drop the height since it should be somewhat less important than the reach in fighting.
 
 ```{r}
-# Drop columns of # of total strikes
+# Drop columns of # of height
 tot_col = sapply(colnames(data_reduced), str_detect, regex("Height"))
 data_reduced = data_reduced[, !(tot_col)]
 ```
 
-**Getting rid of linear dependancy between columns (NN & Decision Tree can ignore this part)**
-
-Since some of the columns in the data are the sum of some other columns, we have to remove them so that statistical regression can work.
-
-The first one is "significant strikes landed". Basically it is the sum of strikes landed in every position. (distance, clinch, ground), so we have to remove it. Also, since the sum of strikes landed on every body part (head, body, leg) also sums up to "significant strikes landed", we'll have to choose between position and body part.
+**Check correlation of the remaining columns**
 
 ```{r}
-# Remove columns of sig strikes landed
-sig_landed_col = sapply(colnames(data_reduced), str_detect, regex("SIG_STR_landed"))
-data_reduced = data_reduced[, !(sig_landed_col)]
-```
-
-```{r}
-#Remove strikes landed on each body part or (in each position)
-str_types = c("DISTANCE", "CLINCH", "GROUND")
-#str_types = c("HEAD", "BODY", "LEG")
-for(i in 1:length(str_types)){
-  str = paste(str_types[i], "_landed", sep="")
-  att_col = sapply(colnames(data_reduced), str_detect, regex(str))
-  data_reduced = data_reduced[, !(att_col)]
+cor_mat = data.frame(cor(data_reduced[, 3:18]))
+for(i in 1:(nrow(cor_mat)-1)){
+  for(j in (i+1):(ncol(cor_mat))){
+    if(cor_mat[i, j] >= 0.75){
+      cat(sprintf("%s & %s: %f\n", rownames(cor_mat)[i], colnames(cor_mat)[j], cor_mat[i, j]))
+    }
+  }
 }
 ```
 
-Another one is "wins" column. It is the sum of all types of wins, so we also have to remove it.
+We can see that "avg_SIG_STR_landed", "B_avg_HEAD_landed" and "B_avg_DISTANCE_landed" are strongly correlated. This is because a huge number of the significant strikes happen while both fighters are standing up and keeping a distance, which is the definition of distance strikes. Also, while both fighters are throwing shots at a distance, they mostly target the other fighter's head. That's why these three columns are highly correlated. Therefore, We can simply just keep one of them, we choose "B_avg_HEAD_landed" here.
+
+```{r}
+drop_col = sapply(colnames(data_reduced), str_detect, regex("avg_SIG_STR_landed|avg_DISTANCE_landed"))
+data_reduced = data_reduced[, !(drop_col)]
+```
+
+**Getting rid of linear dependancy between columns**
+
+Since some of the columns in the data are the sum of some other columns, we have to remove them so that statistical regression can work.
+
+One is "wins" column. It is the sum of all types of wins, so we have to remove it.
 
 ```{r}
 # Remove columns of wins
-wins_col = sapply(colnames(data_reduced), str_detect, regex("_wins$"))
-data_reduced = data_reduced[, !(wins_col)]
+# wins_col = sapply(colnames(data_reduced), str_detect, regex("_wins$"))
+# data_reduced = data_reduced[, !(wins_col)]
 ```
 
 **Merge columns**
@@ -274,30 +300,53 @@ dec_col = sapply(colnames(data_reduced), str_detect, regex("win_by_Decision_"))
 data_reduced = data_reduced[, !(dec_col)]
 ```
 
+**Check the relation between response variable and X variables with boxplot**
+
+```{r}
+data_reduced = data_reduced[, c(1:2, 3:24,47,49,51,25:46, 48,50,52)]
+data_swap = data_reduced[, c(1:2, 28:52, 3:27)]
+blue_idx = data_reduced$Winner == "Blue"
+red_idx = data_reduced$Winner == "Red"
+data_swap$Winner[blue_idx] = "Red"
+data_swap$Winner[red_idx] = "Blue"
+combine_data = rbind(data_reduced, data_swap)
+
+win_lose_data = data_reduced[,3:52]
+
+for(i in 1:nrow(data_reduced)){
+  if(data_reduced[i, 1] == "Blue")
+    win_lose_data[i,] = data_reduced[i,3:52]
+  else
+    win_lose_data[i,] = data_reduced[i, c(28:52, 3:27)]
+}
+
+for(i in c(1:20, 23:25)){
+  boxplot(win_lose_data[,i], win_lose_data[, i+25], main=paste(strsplit(colnames(win_lose_data)[i], "_")[[1]][-1], sep=""), col=rainbow(2), outline=F)
+  cat(paste(strsplit(colnames(win_lose_data)[i], "_")[[1]][-1], sep=""))
+  cat(sprintf(" ==> Winner: %f vs Loser: %f\n", median(win_lose_data[,i]), median(win_lose_data[, i+25])))
+  # boxplot(win_lose_data[,i] - win_lose_data[, i+25], main=paste(strsplit(colnames(win_lose_data)[i], "_")[[1]][-1], sep=""), outline=F)
+}
+
+```
+
+After comparing each stat of winners and losers with boxplot, we decide to remove "avg KD", "avg SIG STR pct", "avg TD pct", "avg REV", "avg CLINCH landed", "total time fought.seconds.", "total rounds fought", "win by KO.TKO", "win by Submission", "win by Decision", "current streak", "total title bouts", "wins", "losses".
+
+```{r}
+boxplot(win_lose_data[,22] - win_lose_data[, 47], outline=F)
+cat(median(win_lose_data[,22] - win_lose_data[, 47]))
+```
+
+We also check the reach difference between winners and losers, it turns out that the reach doesn't have that much influence since the median of reach difference is zero. Therefore, actually we can just drop the reach and the weight class.
+
+```{r}
+last_drop = c("KD|pct|REV|CLINCH|total|win|loss|Stance|current|Reach|class")
+rm_col = sapply(colnames(data_reduced), str_detect, regex(last_drop))
+data_reduced = data_reduced[, !(rm_col)]
+```
+
 **Write the dataframe into csv file**
 
 ```{r}
-# For ML methods
-# data_reduced = data_reduced[, c(1:26, 51, 53, 55, 27:50, 52, 54, 56)]
-# filename = "data_ML.csv"
-
-# For statistical learning methods
-data_reduced = data_reduced[, c(1:21, 41, 43, 45, 22:40, 42, 44, 46)]
-filename = "data_body_logit.csv"
-#filename = "data_position_logit.csv"
-```
-
-To reduce the complexity of data, we decide to remove some more columns here.
-
-```{r}
-# Delete some more columns here
-drop_col = c("avg_SIG_STR_pct", "avg_TD_pct", "REV", "total_time_fought", "total_rounds_fought", "Stance")
-for(i in 1:length(drop_col)){
-  att_col = sapply(colnames(data_reduced), str_detect, regex(drop_col[i]))
-  data_reduced = data_reduced[, !(att_col)]
-}
-```
-
-```{r}
+filename = "data_predict.csv"
 write.csv(data_reduced, filename, row.names = FALSE)
 ```
